# filetree

./: CMakeLists.txt  README.md  main.cpp
include/: FileTree.h  TreeApp.h  entryinfo.h  file_tree.h  filetree.h  filtering.h  formatting.h  options.h  tree_app.h  treeapp.h
src/: FileTree.cpp  TreeApp.cpp  file_tree.cpp  filetree.cpp  filtering.cpp  formatting.cpp  main.cpp  tree_app.cpp  treeapp.cpp
tests/: test_FileTree.cpp  test_TreeApp.cpp  test_filetree.cpp  test_filtering.cpp  test_formatting.cpp  test_treeapp.cpp
